--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -59,7 +59,7 @@
         android:background="@drawable/white_background"
         android:fontFamily="@font/poppins_light"
         android:gravity="start|center_vertical"
-        android:hint="Тут надо название алреса"
+        android:hint="Введите название адреса"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:singleLine="true"
@@ -178,7 +178,7 @@
             android:layout_weight="1"
             android:background="@drawable/white_background"
             android:fontFamily="@font/poppins_thin"
-            android:text="Delete"
+            android:text="Удалить"
             android:textAllCaps="false"
             android:textColor="@color/g_gray700"
             android:textSize="12dp"
@@ -193,7 +193,7 @@
             android:layout_weight="1"
             android:background="@drawable/blue_background"
             android:fontFamily="@font/poppins_thin"
-            android:text="Save"
+            android:text="Сохранить"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="12dp"
