--- a/app/src/main/res/layout/color_rv_item.xml
+++ b/app/src/main/res/layout/color_rv_item.xml
@@ -6,8 +6,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageShadow"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:src="#B8D9FA"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -15,8 +15,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageColor"
-        android:layout_width="21dp"
-        android:layout_height="21dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:src="@color/g_blue"
         app:layout_constraintStart_toStartOf="@id/imageShadow"
         app:layout_constraintTop_toTopOf="@id/imageShadow"
@@ -25,13 +25,15 @@
 
     <ImageView
         android:id="@+id/imagePicked"
-        android:layout_width="20sp"
-        android:layout_height="20sp"
+        android:layout_width="35sp"
+        android:layout_height="35sp"
         android:src="@drawable/ic_picked"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/imageColor"
+        app:layout_constraintEnd_toEndOf="@id/imageColor"
+        app:layout_constraintHorizontal_bias="0.083"
         app:layout_constraintStart_toStartOf="@id/imageColor"
         app:layout_constraintTop_toTopOf="@id/imageColor"
-        app:layout_constraintBottom_toBottomOf="@id/imageColor"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@id/imageColor" />
+        app:layout_constraintVertical_bias="0.083" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
