--- a/app/src/main/res/layout/fragment_base_category.xml
+++ b/app/src/main/res/layout/fragment_base_category.xml
@@ -53,12 +53,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvBestProducts"
             android:layout_marginEnd="15dp"
-            android:overScrollMode="never" />
-
+            android:overScrollMode="never"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvBestProducts" />
 
         <ProgressBar
             android:id="@+id/bestProductsProgressBar"
