--- a/app/src/main/res/layout/fragment_introdcution.xml
+++ b/app/src/main/res/layout/fragment_introdcution.xml
@@ -73,7 +73,7 @@
         app:layout_constraintStart_toStartOf="@id/tvQuality"
         app:layout_constraintEnd_toEndOf="@id/tvQuality"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Start"/>
+        android:text="Старт"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeftTexture"
