--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,6 +60,7 @@
             android:layout_width="0dp"
             style="@style/editText"
             android:layout_height="@dimen/edittextHeight"
+            android:textColor="@color/black"
             android:layout_marginTop="50dp"
             android:hint="Почта"
 
