--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_light"
         android:gravity="center"
-        android:text="No orders to show"
+        android:text="Заказов пока нет"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:visibility="gone"
