--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -31,11 +31,11 @@
                 android:id="@+id/img_favorite"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@color/white"
+                android:background="@null"
                 android:paddingTop="10dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/baseline"
-                app:tint="@color/g_gray700" />
+                app:tint="#FFF44336" />
             <ImageView
                 android:id="@+id/imageClose"
                 android:layout_width="2dp"
@@ -122,7 +122,7 @@
                     android:layout_height="wrap_content"
                     style="@style/h3"
                     android:textColor="@color/black"
-                    android:text="Color" />
+                    android:text="Цвет" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvColors"
@@ -143,7 +143,7 @@
                     android:layout_height="wrap_content"
                     style="@style/h3"
                     android:textColor="@color/black"
-                    android:text="Size" />
+                    android:text="Размер" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_sizes"
