--- a/app/src/main/res/layout/special_rv_item.xml
+++ b/app/src/main/res/layout/special_rv_item.xml
@@ -21,16 +21,17 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="230dp"
-            android:layout_height="117dp"
+            android:layout_width="224dp"
+            android:layout_height="123dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/special_background" />
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageSpecialRvItem"
             android:layout_width="90dp"
+            app:shapeAppearanceOverlay="@style/corners"
             android:layout_height="90dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
@@ -67,9 +68,10 @@
 
         <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btn_add_to_cart"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_width="97dp"
             android:layout_height="24dp"
-            android:layout_marginTop="8dp"
             android:background="@drawable/blue_background"
             android:fontFamily="@font/poppins_light"
             android:text="В корзину"
@@ -82,7 +84,7 @@
             app:layout_constraintHorizontal_bias="0.947"
             app:layout_constraintStart_toEndOf="@+id/imageSpecialRvItem"
             app:layout_constraintTop_toBottomOf="@id/tvSpecialPrdouctPrice"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
             android:layout_width="23dp"
