--- a/app/src/main/res/layout/best_deals_rv_item.xml
+++ b/app/src/main/res/layout/best_deals_rv_item.xml
@@ -5,7 +5,8 @@
     android:layout_width="200dp"
     android:layout_height="100dp"
     android:background="@color/g_card_background"
-    android:elevation="0dp"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="5dp"
     >
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,16 +16,15 @@
         android:layout_width="194dp"
         android:layout_height="98dp"
         tools:layout_editor_absoluteX="5dp" />
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="200dp"
-        android:layout_height="100dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="200dp"
+            android:layout_height="100dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/img_best_deal"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginStart="16dp"
-            app:shapeAppearanceOverlay="@style/corners"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
