--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -53,7 +53,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvSpecialProducts"
                 android:layout_width="400dp"
-                android:layout_height="150dp"
+                android:layout_height="140dp"
                 android:layout_marginStart="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -61,7 +61,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvBestDealsProducts"
                 android:layout_width="358dp"
-                android:layout_height="86dp"
+                android:layout_height="100dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="70dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,25 +69,27 @@
                 app:layout_constraintStart_toStartOf="@+id/imageView3"
                 app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="33dp"
-                android:src="@drawable/next"
-                app:layout_constraintStart_toEndOf="@+id/textView5"
-                app:layout_constraintTop_toTopOf="@+id/imageView3" />
-
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/allProducts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="124dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="24dp"
                 android:text="Все товары"
                 android:textColor="@color/g_gray500"
                 android:textSize="@dimen/_10sdp"
                 app:layout_constraintStart_toEndOf="@+id/tvBestDeals"
+                app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="12dp"
+                android:layout_marginStart="-10dp"
+                android:layout_marginTop="28dp"
+                android:src="@drawable/next"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.309"
+                app:layout_constraintStart_toEndOf="@+id/allProducts"
                 app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
             <TextView
@@ -106,10 +108,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvBestProducts"
                 android:layout_width="353dp"
-                android:layout_height="224dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="16dp"
                 android:paddingStart="12dp"
-                android:overScrollMode="never"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.39"
                 app:layout_constraintStart_toStartOf="@+id/imageView5"
