--- a/app/src/main/res/layout/special_rv_item.xml
+++ b/app/src/main/res/layout/special_rv_item.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="230dp"
-    android:layout_height="wrap_content"
+    android:layout_width="210dp"
+    android:layout_height="157.5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp"
     app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/g_card_background"
     app:cardUseCompatPadding="true"
     >
 
@@ -19,92 +18,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="224dp"
-            android:layout_height="123dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/special_background" />
+         />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageSpecialRvItem"
-            android:layout_width="90dp"
-            app:shapeAppearanceOverlay="@style/corners"
-            android:layout_height="90dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="180dp"
+            android:layout_height="135dp"
+            android:src="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tvSpecialProductName"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="7dp"
-            android:fontFamily="@font/poppins_thin"
-            android:maxLines="2"
-            android:text="Scotch Premium"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/imageSpecialRvItem"
-            app:layout_constraintTop_toTopOf="@id/imageSpecialRvItem" />
-
-        <TextView
-            android:id="@+id/tvSpecialPrdouctPrice"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/sf_pro_display"
-            android:text="1600₽"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/tvSpecialProductName"
-            app:layout_constraintTop_toBottomOf="@id/tvSpecialProductName" />
-
-        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
-            android:id="@+id/btn_add_to_cart"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_width="97dp"
-            android:layout_height="24dp"
-            android:background="@drawable/blue_background"
-            android:fontFamily="@font/poppins_light"
-            android:text="В корзину"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.947"
-            app:layout_constraintStart_toEndOf="@+id/imageSpecialRvItem"
-            app:layout_constraintTop_toBottomOf="@id/tvSpecialPrdouctPrice"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <LinearLayout
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:background="@drawable/icon_background"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/tvSpecialProductName"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
-
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="7dp"
-                android:src="@drawable/ic_favorite" />
-        </LinearLayout>
+            app:shapeAppearanceOverlay="@style/corners" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
