--- a/app/src/main/res/layout/fragment_billing.xml
+++ b/app/src/main/res/layout/fragment_billing.xml
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:fontFamily="@font/poppins_light"
-                    android:text="Ваш заказ"
+                    android:text="Счета"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@id/imageCloseBilling"
