--- a/app/src/main/res/layout-v26/fragment_address.xml
+++ b/app/src/main/res/layout-v26/fragment_address.xml
@@ -172,7 +172,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonDelelte"
-            android:layout_width="173dp"
+            android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="20dp"
@@ -185,7 +185,20 @@
             android:textSize="12dp"
             android:visibility="visible" />
 
-
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonSave"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/blue_background"
+            android:fontFamily="@font/poppins_thin"
+            android:text="Сохранить"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="12dp"
+            android:visibility="visible" />
     </LinearLayout>
 
     <ProgressBar
