--- a/app/src/main/res/layout/fragment_allproduct.xml
+++ b/app/src/main/res/layout/fragment_allproduct.xml
@@ -9,43 +9,46 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageClose"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="24dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_close"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.023"
-            app:tint="@color/black" />
+
 
         <androidx.recyclerview.widget.RecyclerView
 
-            android:id="@+id/FavRecycle"
-            android:layout_width="364dp"
-            android:layout_height="646dp"
+            android:id="@+id/AllRecycle"
+            android:layout_width="387dp"
+            android:layout_height="700dp"
             android:layout_marginTop="@dimen/_14sdp"
-            tools:listitem="@layout/product_in_fav"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:listitem="@layout/product_rv_item" />
+
+        <ImageView
+            android:id="@+id/imageClose"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_close"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:tint="@color/black" />
 
         <TextView
             android:id="@+id/textView2"
             style="@style/h4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="76dp"
-            android:layout_marginTop="16dp"
-            android:text="Избранные товары"
-            android:textSize="25dp"
+            android:layout_marginTop="20dp"
+            android:text="Все товары"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.218"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
