--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -27,9 +27,9 @@
 
                 <ImageView
                     android:id="@+id/imageCloseCart"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:scaleType="centerInside"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_close"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -41,10 +41,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
-                    android:fontFamily="@font/poppins_light"
                     android:text="Корзина"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="23dp"
+                    android:fontFamily="@font/poppins_thin"
+                    style="@style/h4"
+                    android:layout_marginTop="5dp"
+                    android:paddingStart="15dp"
                     app:layout_constraintBottom_toBottomOf="@id/imageCloseCart"
                     app:layout_constraintStart_toStartOf="@id/imageCloseCart"
                     app:layout_constraintTop_toTopOf="@id/imageCloseCart" />
