--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -18,11 +18,11 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="395dp"
+                android:layout_width="385dp"
                 android:layout_height="139dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginTop="16dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
                 android:src="@drawable/banner"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -30,12 +30,13 @@
 
             <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="395dp"
+                android:layout_width="385dp"
+
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_height="135dp"
                 android:layout_marginTop="52dp"
                 android:src="@drawable/banner"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.476"
                 app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +109,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvBestProducts"
                 android:layout_width="353dp"
-                android:layout_height="300dp"
+                android:layout_height="350dp"
                 android:layout_marginTop="16dp"
                 android:paddingStart="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
