--- a/app/src/main/res/navigation/shopping_graph.xml
+++ b/app/src/main/res/navigation/shopping_graph.xml
@@ -6,6 +6,17 @@
     app:startDestination="@id/homeFragment">
 
     <fragment
+        android:id="@+id/searchProduct"
+        android:name="com.example.kelineyt.fragments.shopping.SearchProductFragment"
+        android:label="SearchProduct" >
+        <argument
+            android:name="product"
+            app:argType="com.example.kelineyt.data.Product" />
+        <action
+            android:id="@+id/action_searchProduct_to_productDetailsFragment"
+            app:destination="@id/productDetailsFragment" />
+    </fragment>
+    <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.kelineyt.fragments.shopping.HomeFragment"
         android:label="HomeFragment"
@@ -22,10 +33,13 @@
         <action
             android:id="@+id/action_homeFragment_to_allProductFragment"
             app:destination="@id/allProductFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_searchProduct"
+            app:destination="@id/searchProduct" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.kelineyt.fragments.shopping.SearchFragment"
+        android:name="com.example.kelineyt.fragments.shopping.FavoriteFragment"
         android:label="SearchFragment"
         tools:layout="@layout/fragment_search">
         <action
@@ -110,6 +124,7 @@
     </fragment>
     <fragment
         android:id="@+id/userAccountFragment"
+        tools:layout="@layout/fragment_user_account"
         android:name="com.example.kelineyt.fragments.settings.UserAccountFragment"
         android:label="UserAccountFragment" />
     <fragment
